--- a/day-by-day/20220513.md
+++ b/day-by-day/20220513.md
@@ -8,7 +8,7 @@
 
 빠트린 그 문제를! 아이패드로 정리해보았다.
 
-![배열 파티션](C:\Users\JSOI\Desktop\배열 파티션.jpg)
+![배열 파티션](https://user-images.githubusercontent.com/17975647/168281704-da971374-761b-45bd-908f-1e2ff90a4748.jpg)
 
 
 
