--- a/day-by-day/20220515.md
+++ b/day-by-day/20220515.md
@@ -4,13 +4,13 @@
 
 ### [1주 일정 요약]
 
-- 05/09(월) ~ 05/12(수)까지 3일간 미니프로젝트(Python-Flask)를 좋은 팀원분들과 진행할 수 있었고 많이 배웠다 :smile:
+- 05/09(월) ~ 05/13(목)까지 4일간 미니프로젝트(Python-Flask)를 좋은 팀원분들과 진행할 수 있었고 많이 배웠다 :smile:
 
-- 그리고 05/12(목)~05/13(금) 동안 알고리즘을 python으로 진행하고 있다.
+- 그리고 05/13(금)~05/14(토) 동안 알고리즘을 python으로 진행하고 있다.
 
 #### [미니 프로젝트]
 
-3일간 프로젝트를 진행하며 기초를 정리하기 위해 세션, 쿠키, 토큰에 대해 다시 한 번 찾아보았다. 해당 내용은 1주차 프로젝트 회고에 기록했지만 다시 정리하는 느낌으로 간단히 적어보겠다
+4일간 프로젝트를 진행하며 기초를 정리하기 위해 세션, 쿠키, 토큰에 대해 다시 한 번 찾아보았다. 해당 내용은 1주차 프로젝트 회고에 기록했지만 다시 정리하는 느낌으로 간단히 적어보겠다
 
 JWT를 포함한 세션/쿠키/토큰에 대한 정보는 해당 영상을 참고했다 <https://youtu.be/tosLBcAX1vk>
 
