--- a/day-by-day/20220511.md
+++ b/day-by-day/20220511.md
@@ -45,7 +45,7 @@ GET 요청을 통해 DB에 접근하여 내용을 긁어오려 했으나,
 |         보안에 취약하다         | 강력한 암호화 알고리즘 사용 |
 |        클라이언트에 저장        |         서버에 저장         |
 |      웹 브라우저에 의존적       |    웹 브라우저에 독립적     |
-|     과다시 **서버에 부하**      |  과다시 **네트워크 부하**   |
+|     과다시 **네트워크 부하**      |   과다시 **서버에 부하**  |
 | 서버 전송을 기피하면 webstorage |                             |
 
 
