--- a/day-by-day/20220517.md
+++ b/day-by-day/20220517.md
@@ -30,6 +30,36 @@ append(x), appendleft(x), clear 등의 함수를 추후에 정리하겠다
 
 
 
+python 입출력
+
+#### 공백을 기준으로 문자열 쪼개서 입력받기
+
+```python
+a,b = input().split()
+```
+
+#### 구분자를 이용해 출력하기
+
+```python
+print(a,b,sep=':')
+```
+
+#### character를 숫자로
+
+```python
+ord(char) # 
+```
+
+#### 정수 값을 유니코드 문자로
+
+```python
+chr(char) 
+```
+
+
+
+
+
 #### [CS정리]
 
  **HDD와 SSD의 차이**
