--- a/day-by-day/20220524.md
+++ b/day-by-day/20220524.md
@@ -36,4 +36,41 @@
 
 
 
-[알고리즘]
+### [알고리즘]
+
+## Tree
+
+부모와 자식으로 표현됨
+
+순환 구조를 갖지 않고, 루트가 하나인 그래프라고 생각하면 된다.
+
+
+
+#### 트리의 종류
+
+이진 트리, 완전 이진 트리
+
+
+
+#### 이진 트리의 특징
+
+모든 노드의 자식의 노드의 개수가 [0,2]개
+
+완전 이진 트리 : 왼쪽부터 차례대로 삽입되는 것
+
+완전 트리 구조를 배열로 구성하자
+
+- 클래스
+- 배열
+
+로 구현 가능
+
+노드의 개수가 N일 때, 완전 이진 트리의 높이는 logN임.
+
+
+
+트리의 높이:
+
+레벨1일경우 : 1 (2^0+1)
+
+레벨2일경우: 3(2^1+1)
